2008-06-30  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* libs/gst/dataprotocol/dataprotocol.c:
	Don't write to the same region of memory as a uint64 and uint16
	as this breaks strict aliasing rules and apparantly breaks on PPC
	and s390. Thanks to Sjoerd Simons for analysing. Fixes bug #348114.

2008-06-29  Stefan Kost  <ensonic@users.sf.net>

	* libs/gst/controller/gstinterpolationcontrolsource.c:
	  Optimize list handling. Use own find function. Exploit that fact that
	  the list is sorted. Also pass back the node before, so that we can
	  insert quickly. Have a fast path for append.

2008-06-29  Stefan Kost  <ensonic@users.sf.net>

	* docs/design/draft-framestep.txt:
	* docs/design/part-negotiation.txt:
	  Fix two typos.

2008-06-27  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Show configuration sumary after configure run. Based on patch by
	  Luc Pionchon <luc.pionchon@nokia.com>. Fixes: #540134

2008-06-27  Stefan Kost  <ensonic@users.sf.net>

	patch by: Luc Pionchon  <luc.pionchon@nokia.com>

	* docs/manual/advanced-autoplugging.xml:
	* docs/manual/advanced-threads.xml:
	* docs/manual/basics-bins.xml:
	* docs/manual/basics-elements.xml:
	* docs/manual/basics-helloworld.xml:
	* docs/manual/basics-pads.xml:
	  Add scale factor for pdf output.

	* docs/manual/intro-basics.xml:
	  Switched sections "pads" and "bins" and added a pipeline diagram.

	* docs/manual/intro-gstreamer.xml:
	  Added more info on gstreamer.

	* docs/manual/intro-motivation.xml:
	  Commented out the whole section "current problem", which sounds
	  historical and somehow osolete; it could be turned in a positive
	  way and reused to improve the design principles.

	* docs/manual/intro-preface.xml:
	  - Update URLs to library.gnome.org. 
	  - Do not mention GTK+ in preliminary reading (irrelevant). 
	  - Mention Plugin Writer's Manual and further reading only in the
	    previous section.
	  - Added a list of most relevant GObject/glib topics.
