@@ -91,8 +91,6 @@ GST_END_TEST;
 
 #ifndef GST_REMOVE_DEPRECATED   /* these tests use deprecated API, that we disable by default */
 
-#ifndef HAVE_CPU_PPC64          /* this test doesn't work on PPC64. See #348114 */
-
 /* test creation of header from buffer and back again */
 GST_START_TEST (test_buffer)
 {
@@ -156,7 +154,6 @@ GST_START_TEST (test_buffer)
 }
 
 GST_END_TEST;
-#endif
 
 GST_START_TEST (test_caps)
 {
@@ -418,9 +415,7 @@ gst_dp_suite (void)
   suite_add_tcase (s, tc_chain);
   tcase_add_test (tc_chain, test_conversion);
 #ifndef GST_REMOVE_DEPRECATED
-#ifndef HAVE_CPU_PPC64
   tcase_add_test (tc_chain, test_buffer);
-#endif
   tcase_add_test (tc_chain, test_caps);
   tcase_add_test (tc_chain, test_event);
   tcase_add_test (tc_chain, test_memory);
